# safellm-apisix-gateway-sidecar

./: .coveragerc_api  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB_OVERVIEW.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.release.yaml  docker-compose.yml  example_data.sh  locustfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  run_tests.sh
.github/workflows/: release.yml
benchmark/: BENCHMARK_DETECTION.py  README.md  benchmark_config.json  benchmark_gateway.py  benchmark_large_payload.py  benchmark_runner.py  datasetBenchmark.py  quick_start.sh
benchmark/REFERENCE_BENCHMARK/: README.md
benchmark/datasets/: known_false_positives.csv  toxicity_prompts.csv
config/: apisix.yaml  config.yaml
examples/: simulate_attack.sh
examples/apisix-reference/: .env.example  README.md  docker-compose.yml  smoke-test.sh
examples/mcp-reference/: .env.example  README.md  docker-compose.yml  smoke-test.sh
helm/safellm-oss/: Chart.yaml  values.yaml
scripts/: export_requirements.py
sidecar/: Dockerfile  __init__.py  app.py  edition.py  models.py  requirements.txt
sidecar/api/: __init__.py  auth.py  deps.py  dlp.py  guard.py
sidecar/core/: __init__.py  audit.py  interfaces.py  logger.py  pii_masking.py  providers.py  redis_client.py  settings.py  telemetry.py  text.py
sidecar/layers/: __init__.py  base.py  (+5 more)
tests/: BENCHMARK_DETECTION.py  DLP_TESTS_README.md  README.md  comprehensive_security_test.py  conftest.py  test_dlp_performance.py  test_dlp_scenarios.py  test_optimizations.py  test_visualizer.py
(+52 files in other folders)
