[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safellm-sidecar"
version = "2.1.0"
description = "SafeLLM Sidecar - OSS AI Security Gateway for Apache APISIX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.0.0",
    "flashtext>=2.7",
    "presidio-analyzer>=2.2.350",
    "redis[hiredis]>=5.0.0",
    "orjson>=3.9.0",
    "structlog>=23.2.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://safellm.io"
Documentation = "https://safellm.io/docs"
Source = "https://safellm.io"
Support = "https://safellm.io/support"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]

[tool.setuptools]
include-package-data = true
